--- a/style.css
+++ b/style.css
@@ -48,23 +48,19 @@ header nav ul li a:hover {
 
 main {
     width: 960px;
-    height: 1200px;
+    height: 1550px;
     margin-top: 20px;
-    border: 2px solid white;
     border-radius: 5px;
     display: grid;
-
 }
 
 #cont {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
     align-items: center;
     width: 900px;
     height: 300px;
     margin: 0 auto;
-    grid-template-columns: 1fr 4fr;
 }
 
 .info {
@@ -74,9 +70,8 @@ main {
 
 .s1 {
     width: 450px;
-    height: 550px;
-    /* border: 2px solid white; */
-    margin: 10px;
+    height: 700px;
+    margin-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -84,9 +79,7 @@ main {
 
 .s2 {
     width: 920px;
-    height: 550px;
-    /* border: 2px solid white; */
-    margin: 10px;
+    height: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,6 +107,21 @@ p {
     width: 500px;
 }
 
+figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+figure figcaption {
+    color: #fff;
+}
+
+figure figcaption a {
+    color: white;
+    font-weight: bolder;
+    font-style: italic;
+}
+
 footer {
     width: 960px;
     height: 80px;
@@ -139,4 +147,164 @@ footer {
 
 .redes_sociais a:hover {
     color: rgb(0, 0, 0)
+}
+
+/* Inicio do formulário de contato */
+
+#main_contato {
+    width: 900px;
+    height: 700px;
+    margin-top: 20px;
+    border: 2px solid #025f4e;
+    border-radius: 5px;
+    display: grid;
+    background-color: #02735E;
+}
+
+
+#conteudo_formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 900px;
+    height: 300px;
+    margin: 0 auto;
+}
+
+#contato {
+    float: right;
+    width: 740px;
+    height: 750px;
+}
+
+#formulario {
+    width: 720px;
+    height: 560px;
+}
+
+fieldset {
+    border: 4px solid #babaca;
+    border-radius: 5px;
+    box-shadow: 3px 2px 2px black;
+    margin: 15px;
+    background-color: #025951;
+}
+
+legend {
+    color:#fff;
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12pt;
+    padding: 0 10px 0 10px ;
+    text-shadow: 2px 3px 3px #111;
+}
+
+label {
+    color: #fff;
+    font-weight: bolder;
+    font-size: 12pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 50px;
+}
+
+input {
+    border-bottom: 2px solid #000;
+    outline: none;
+    border-radius: 4px;
+    width: 350px;
+    height: 30px;
+    font-size: 12pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    float: right;
+    margin-right: 180px;
+    margin-top: 10px;
+    transition: width .35s ease-in-out;
+}
+
+input:focus{
+    width: 360px;
+}
+
+input:hover {
+    background-color: rgba(241, 241, 241, 0.6);
+    border-radius: 4px;
+}
+
+select {
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    border-radius: 5px;
+    outline: none;
+    width: 200px;
+    height: 30px;
+    font-size: 12pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    float: right;
+    margin-right: 330px;
+    margin-top: 10px;
+}
+
+textarea {
+    border: 2px solid #000;
+    border-radius: 4px;
+    width: 350px;
+    height: 160px;
+    resize: none;
+    font-size: 12pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    float: right;
+    margin-right: 180px;
+    margin-top: 10px;
+}
+
+#btn {
+    width: 300px;
+    height: 0;
+    border: none;
+    float: none;
+    margin-left: 200px;
+}
+
+input[type=submit] {
+    float: left;
+    width: 90px;
+    height: 40px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    background-color: rgb(58, 201, 58);
+    color: #FFF;
+    font-weight: bolder;
+    box-shadow: 3px 3px 4px rgba(10, 10, 10, 0.7);
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: rgb(20, 124, 20);
+}
+
+input[type=reset] {
+    float: left;
+    width: 90px;
+    height: 40px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    background-color: rgb(201, 137, 58);
+    color: #FFF;
+    font-weight: bolder;
+    box-shadow: 3px 3px 4px rgba(10, 10, 10, 0.7);
+    cursor: pointer;
+}
+
+input[type=reset]:hover {
+    background-color: rgb(141, 93, 33);
+}
+
+/* Inicio página sobre */
+
+#main_sobre {
+    width: 960px;
+    height: 800px;
+    margin-top: 20px;
+    border-radius: 5px;
+    display: grid;
 }
